--- a/pcep/ietf-stateful02/pom.xml
+++ b/pcep/ietf-stateful02/pom.xml
@@ -36,6 +36,10 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>concepts</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>pcep-api</artifactId>
         </dependency>
         <dependency>
@@ -44,7 +48,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>concepts</artifactId>
+            <artifactId>pcep-topology-api</artifactId>
         </dependency>
 
         <!--
