--- a/pcep/tunnel-provider/pom.xml
+++ b/pcep/tunnel-provider/pom.xml
@@ -48,6 +48,14 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-ietf-stateful02</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-ietf-stateful07</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>programming-spi</artifactId>
         </dependency>
         <dependency>
