--- a/pcep/ietf-stateful02/pom.xml
+++ b/pcep/ietf-stateful02/pom.xml
@@ -50,6 +50,10 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>pcep-topology-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-tunnel-api</artifactId>
+        </dependency>
 
         <!--
             FIXME: this is in support of the generated code. This should not
